--- a/Project 2/about.html
+++ b/Project 2/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-         <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet"> 
         <title>Widgets and Things</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/normalize.css">
@@ -17,17 +17,15 @@
             <h1>Widgets and Things</h1>
         </header>
         <nav>
-                <a class="active" href="index.html">Home</a>
-                <a href="about.html"> About</a>
+                <a href="index.html">Home</a>
+                <a class="active"       href="about.html"> About</a>
                 <a href="products.html">Products</a>
         </nav>
         <main>
-            <h2>Welcome to Widgets and Things</h2>
+            <h2>About Widgets and Things</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores ipsa, praesentium laudantium, unde, laboriosam error officia exercitationem quasi cupiditate vitae facere vel accusamus quas doloribus nostrum tempore pariatur perspiciatis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique facilis itaque ipsam culpa assumenda. Aliquid doloremque deserunt, exercitationem temporibus facilis nesciunt laborum mollitia magni consequuntur aliquam similique quibusdam, nemo amet.</p>
 
-            <img src="images/product1.svg" alt="Product 1">
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quaerat illum repellendus, ea deleniti sit, illo, veritatis architecto voluptatem dicta fuga cum mollitia atque consequatur dignissimos. Eveniet nostrum optio dolor! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt fugiat expedita voluptates tempore, molestias ad maxime qui illo perferendis, repellendus accusamus neque ea eos iusto dolore animi sit voluptas facere.</p>
+            <img src="images/about.svg" alt="About Widgets and Things">
         </main>
         <footer>&copy; 2021 Widgets and Things</footer>
    </div>
