--- a/Project 2/about.html
+++ b/Project 2/about.html
@@ -4,7 +4,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet"> 
-        <title>Widgets and Things</title>
+        <title>Kitten Mittens</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/normalize.css">
         <link rel="stylesheet" href="CSS/styles.css">
@@ -13,8 +13,8 @@
    <body>
    <div id="container">
         <header>
-            <img src="images/logo.svg" alt="Company Logo">
-            <h1>Widgets and Things</h1>
+            <img src="images/kittenlogo.gif" alt="Company Logo">
+            <h1>Kitten Mittens</h1>
         </header>
         <nav>
                 <a href="index.html">Home</a>
@@ -22,12 +22,12 @@
                 <a href="products.html">Products</a>
         </nav>
         <main>
-            <h2>About Widgets and Things</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores ipsa, praesentium laudantium, unde, laboriosam error officia exercitationem quasi cupiditate vitae facere vel accusamus quas doloribus nostrum tempore pariatur perspiciatis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique facilis itaque ipsam culpa assumenda. Aliquid doloremque deserunt, exercitationem temporibus facilis nesciunt laborum mollitia magni consequuntur aliquam similique quibusdam, nemo amet.</p>
+            <h2>About Kitten Mittens</h2>
+            <p>We love cats and mittens, so our team decided to combine the ideas!</p>
 
-            <img src="images/about.svg" alt="About Widgets and Things">
+            <img src="images/aboutkittenmittens.gif" alt="About Kitten Mittens">
         </main>
-        <footer>&copy; 2021 Widgets and Things</footer>
+        <footer>&copy; Kitten Mittens</footer>
    </div>
    </body>
 </html>
