--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-         <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet"> 
-        <title>Widgets and Things</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet"> 
+        <title>Kitten Mittens</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="CSS/normalize.css">
         <link rel="stylesheet" href="CSS/styles.css">
@@ -13,8 +13,8 @@
    <body>
    <div id="container">
         <header>
-            <img src="images/logo.svg" alt="Company Logo">
-            <h1>Widgets and Things</h1>
+            <img src="images/kittenlogo.gif" alt="Company Logo">
+            <h1>Kitten Mittens</h1>
         </header>
         <nav>
                 <a class="active" href="index.html">Home</a>
@@ -22,14 +22,14 @@
                 <a href="products.html">Products</a>
         </nav>
         <main>
-            <h2>Welcome to Widgets and Things</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolores ipsa, praesentium laudantium, unde, laboriosam error officia exercitationem quasi cupiditate vitae facere vel accusamus quas doloribus nostrum tempore pariatur perspiciatis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique facilis itaque ipsam culpa assumenda. Aliquid doloremque deserunt, exercitationem temporibus facilis nesciunt laborum mollitia magni consequuntur aliquam similique quibusdam, nemo amet.</p>
+            <h2>Welcome to Kitten Mittens</h2>
+            <p>Hello, Griffon Lee here, local business owner and cat enthusiast! Is your cat making too much noise all the time?! Are they constantly stomping around, driving you crazy? Is your cat clawing at your furniture? Think there's no answer? Well there is!</p>
+            <p>Kitten Mittens!</p>
+            <img src="images/kittenmittenex1.webp" alt="Cat 1">
 
-            <img src="images/product1.svg" alt="Product 1">
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quaerat illum repellendus, ea deleniti sit, illo, veritatis architecto voluptatem dicta fuga cum mollitia atque consequatur dignissimos. Eveniet nostrum optio dolor! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt fugiat expedita voluptates tempore, molestias ad maxime qui illo perferendis, repellendus accusamus neque ea eos iusto dolore animi sit voluptas facere.</p>
+            <p>Finally there is an elegant, comfortable mitten for cats! Is your cat one legged? Is your cat fat, skinny, or in-between? That doesn't matter because one size fits all! Kitten Mittens, you'll be smitten! Mreow!</p>
         </main>
-        <footer>&copy; 2021 Widgets and Things</footer>
+        <footer>&copy; 2021 Kitten Mittens</footer>
    </div>
    </body>
 </html>
