--- a/Project 2/products.html
+++ b/Project 2/products.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widgets and Things</title>
+    <title>Kitten Mittens</title>
     <link rel = "stylesheet" href = "css/styles.css">
 </head>
 
@@ -16,7 +16,7 @@
 <div id="containers">
    
     <header>
-        <img src="images/logo.svg" alt="Widgets and Things Logo">
+        <img src="images/kittenlogo.gif" alt="Kitten Mittens Logo">
     </header>
    
     <nav>
@@ -26,27 +26,27 @@
     </nav>
    
     <main>
-        <h2>Product Line</h2>
+        <h2>Kitten Product Line</h2>
 
         <h3 class="pro_head">Product 1</h3>
-        <img src="images/product1.svg" alt="Products">
+        <img src="images/kittenmittens.webp" alt="Products">
 
         <h3 class="pro_head">Product 2</h3>
-        <img src="images/product2.svg" alt="Products">
+        <img src="images/kittenmittenproduct2.jpg" alt="Products">
 
         <h3 class="pro_head">Product 3</h3>
-        <img src="images/product3.svg" alt="Products">
+        <img src="images/kittenmittenproduct3.jpg" alt="Products">
 
         <h3 class="pro_head">Product 4</h3>
-        <img src="images/product4.svg" alt="Products">
+        <img src="images/kittenmittenproduct4.jpg" alt="Products">
 
         <h3 class="pro_head">Product 5</h3>
-        <img src="images/product5.svg" alt="Products">
+        <img src="images/kittenmittenproduct5.jpg" alt="Products">
         
     
     </main>
    
-    <footer>&copy; 2022 Widgets and Things</footer>
+    <footer>&copy; 2022 Kitten Mittens</footer>
  </div>
 </body>
 </html>
