--- a/Project 2/products.html
+++ b/Project 2/products.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitten Mittens</title>
     <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel = "stylesheet" href = "css/styles.css">
+    <link rel = "stylesheet" href = "CSS/styles.css">
 </head>
 
 <body>
