--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet"> 
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 </head>
@@ -26,14 +26,17 @@
         <main>
             <div id="flex">
                 <div class="col">
+                    <h2>Bryant</h2>
                     <img src="images/bryant.jpg" alt="Menace">
                     <p>This is my roomate Bryant. He's just quirked up with a little bit of swag</p>
                 </div>
                 <div class="col">
+                    <h2>Gamer Bryant</h2>
                     <img src="images/gamerbryant.jpg" alt="Laptop">
                     <p>This is my roomate Bryant, but its 2010 and he just got a facebook</p>
                 </div>
                 <div class="col">
+                    <h2>Movie Director Bryant</h2>
                     <img src="images/samraimibryant.jpg" alt="Router">
                     <p>This is my roomate bryant when he was a very famous movie director</p>
                 </div>
