--- a/Final/blog.html
+++ b/Final/blog.html
@@ -46,7 +46,7 @@
         </div><!--content-->
         
     </div><!--wrapper-->
-
+</body>
     <div id="footer">
     	<div class="content">
                <div id="left">
