--- a/Final/contact.html
+++ b/Final/contact.html
@@ -50,6 +50,7 @@
                    <a href="#"><span class="leftp">&copy; 2022 Booth Enterprises</span></a>
 
                  </div><!--content-->
+</body>
                         
 </div><!--footer-->    
     
