--- a/Final/index.html
+++ b/Final/index.html
@@ -34,11 +34,11 @@
              <h1>Welcome to my Website!</h1>
              <ul>
               <li><a>We are a not profit organization who strives to expand our collection!</a></li>
-          </ul>
+          </ul> 
         </div><!--content-->
         
     </div><!--wrapper-->
-
+</body>
     <div id="footer">
     	<div class="content">
                <div id="left">
