--- a/Final/portfolio.html
+++ b/Final/portfolio.html
@@ -48,7 +48,7 @@
         </div><!--content-->
         
     </div><!--wrapper-->
-
+</body>
     <div id="footer">
     	<div class="content">
                <div id="left">
