--- a/Final/about.html
+++ b/Final/about.html
@@ -41,7 +41,7 @@
         </div><!--content-->
         
     </div><!--wrapper-->
-
+</body>
     <div id="footer">
     	<div class="content">
                <div id="left">
